[project]
name = "nice-to-meet-you"
version = "0.1.0"
description = "A Project for interview pretest"
dependencies = [
    "django==5.2.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
requires-python = ">=3.13"

# linter configuration
[tool.ruff]
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D", "PLC0415", "ARG002"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.black]
skip-string-normalization = true


# unit test configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.config.base"
python_files = "*/tests.py"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff.per-file-ignores]
"*/tests.py" = ["S101", "PLR2004", "ARG001"]
